--- a/public/index.html
+++ b/public/index.html
@@ -366,7 +366,7 @@
 
     <script>
         let ingredients = [];
-        const API_URL = '/.netlify/functions/recipe-api';
+        const API_URL = '/api/recipe-api';
 
         const ingredientInput = document.getElementById('ingredientInput');
         const tagContainer = document.getElementById('tagContainer');
